# awawa

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  run.sh
cmake/: SlangUtils.cmake
ext/: CMakeLists.txt
include/: core.h
include/app/: Application.h  diligent.h  glfw.h  layer.h  os.h
include/gfx/: mesh_renderer.h  pipeline.h  utils.h
include/gui/: gui.h
include/phys/: xpbd.h
include/physics/: softbody.h
include/tutorial/: 02_cube.h
include/world/: mesh.h  transform.h
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  diligent.cpp  glfw.cpp  os.cpp  surfacehelper.mm
src/gfx/: pipeline.cpp  utils.cpp
src/gui/: gui.mm
src/shaders/: 01_tutorial.slang  02_cube.slang
src/tutorial/: 02_cube.cpp
src/world/: mesh.cpp  transform.cpp
